--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     width: 350px;
-    min-height: 300px;
+    min-height: 400px;
     padding: 20px;
     background-color: #f5f5f5;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -20,14 +20,25 @@ h1 {
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+    padding: 8px 20px;
+    margin-left: 5px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.5);
+    line-height: 1.25;
+    background-color: #ff5e00;
+    color: white;
+    font-size: 10px;
+    letter-spacing: 0.06em;
     cursor: pointer;
-    font-size: 14px;
-    margin-left: 10px;
+    border: none;
+    outline: none;
+    transition: background-color 0.3s ease;
+    overflow: hidden;
+    -webkit-transition: background-color 0.3s ease;
+    -moz-transition: background-color 0.3s ease;
+    -ms-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
+    margin-top: 5px;
 }
 
 .button-container button {
@@ -83,10 +94,18 @@ button {
 
 textarea {
     width: 100%;
+    height: 190px;
     margin: 1px;
-    /*Setmarginto0*/
     resize: vertical;
     font-family: "Courier New", monospace;
-    background-color: #f0f0f0;
+    background-color: #f8f8f8;
     line-height: 1.5;
+    border: 1px solid #ccc;
+    color: #333;
+}
+
+textarea:focus {
+    outline: none;
+    border-color: #aaa7a7;
+    box-shadow: 0px 0px 6px rgba(52, 152, 219, 0.5);
 }
